# fancam_bullettime

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  migrate_coords.py  migrate_full_wiki.py  migrate_is_solo.py  migrate_processed.py  migrate_song_order.py  update_la_day4_setlist.py  verify_refactor.py
backend/: .env.example  ai_contributor_sync.py  ai_fix_setlist_times.py  ai_tag_videos.py  auto_tag_full_concerts.py  fetch_descriptions.py  fetch_descriptions_web.py  find_candidates.py  fix_sequences.py  fix_video_dates.py  fix_zero_offsets.py  init_db.py  main.py  migrate_add_setlist_fields.py  migrate_flexible_timeline.py  migrate_shorts.py  migrate_supabase_contributions.py  migrate_to_supabase.py  normalize_timestamps.py  pyproject.toml  requirements.txt  sync_wikipedia_concerts.py  test_query.py  trigger_recheck.py  twice_fancam.db  update_concerts.py  update_durations.py  update_durations_playwright.py  update_master_setlist.py  vercel.json
backend/app/: main.py
backend/app/core/: config.py
backend/app/crawler/: ai_parser.py  full_concert_importer.py  login.py  recheck_worker.py  step1_search.py  step2_recommendation.py
backend/app/data/: tour_info.json
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/data/: tour_info.json
backend/tests/: test_refactor_optimizations.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminPendingContributionsModal.tsx  ConcertTimelineModal.tsx  MiniVideoList.tsx  (+7 more)
(+6 files in other folders)
